radv, aco: dEQP-VK.glsl.atomic_operations.*_fragment_reference regressed
Bisected to
commit 1588644543df39dcceeec4ed640f1ffe9b4fe159
Author: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Date: Thu Jun 4 08:27:50 2020 +0200
radv: lower deref operations for global memory for both backends
To match ACO.
Signed-off-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Reviewed-by: Rhys Perry <pendingchaos02@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/5316>
tests:
dEQP-VK.glsl.atomic_operations.add_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.add_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.add_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.add_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.and_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.and_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.and_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.and_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.comp_swap_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.comp_swap_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.comp_swap_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.comp_swap_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.exchange_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.exchange_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.exchange_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.exchange_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.max_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.max_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.max_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.max_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.min_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.min_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.min_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.min_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.or_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.or_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.or_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.or_unsigned_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.xor_signed64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.xor_signed_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.xor_unsigned64bit_fragment_reference,Fail
dEQP-VK.glsl.atomic_operations.xor_unsigned_fragment_reference,Fail